made some changes in packages and codes

--- a/views/user/return.ejs
+++ b/views/user/return.ejs
@@ -53,175 +53,10 @@
 </head>
 <body>
 
+  <%- include('../partials/user-header.ejs') %>
   
 
 
-  <style>
-    :root {
---background: rgb(241, 242, 245);
---text-color: rgba(0, 102, 176, 1);
---white: rgb(106, 243, 143);
---user-backhround: rgba(107, 199, 171, 1);
-}
-
-.blue-secondary {
-color: var(--text-color);
-font-size: 1.2rem;
-font-family: Roboto;
-}
-.button-cancel {
-background-color: var(--background) !important;
-}
-
-.add-btn {
-background-color: var(--text-color) !important;
-color: var(--white) !important;
-cursor: pointer !important;
-}
-.text-second {
-color: var(--text-color) !important;
-}
-
-.ladels a {
-text-decoration: none;
-color: var(--text-color);
-}
-.search a {
-color: var(--text-color);
-font-size: 1.5rem;
-}
-
-
-.user-nav {
-position: sticky;
-top: 0;
-z-index: 4;
-background-color: var(--white);
-}
-.search-box {
-background-color: var(--background);
-border-radius: 5px;
-width: 20rem;
-border: none;
-padding: 5px;
-outline: var(--text-color);
-}
-.prof-div {
-z-index: 6;
-right: 4.5rem;
-top: 3rem;
-}
-.account,
-.account a {
-background: var(--user-backhround);
-color: var(--white) !important;
-text-decoration: none !important;
-}
-
-.image-container {
-width: 500px;
-height: 500px;
-position: relative;
-overflow: hidden;
-}
-#primary-img-view {
-width: fit-content;
-min-width: 200px;
-position: absolute;
-left: 50%;
-right: 50%;
-top: 50%;
-transform: translate(-50%, -50%);
-pointer-events: none;
-}
-.add-to-wish-list-btn {
-position: absolute;
-right: 20px;
-top: 20px;
-font-size: 25px;
-z-index: 2;
-}
-.wallet-history {
-max-height: 170px;
-overflow-y: scroll;
-padding: 10px;
-}
-.wallet-history::-webkit-scrollbar {
-width: 7px;
-background-color: rgb(173, 173, 173);
-border-radius: 10px;
-}
-.wallet-history::-webkit-scrollbar-thumb {
-background: #2d6b5e;
-border-radius: 10px;
-}
-</style>
-<nav id="navbar" class="nav user-nav d-flex py-2 justify-content-between align-items-center px-5 mt-0" >
-    <section >
-      <div id="prof-div" style="display: none;" class="divwrapper">
-        <div
-          class="prof-div prof-div card d-flex position-absolute flex-coulumn justify-content-center align-items-center">
-          <div class="account d-flex justify-content-center align-items-center">
-            <span class="h5 px-5 py-1 text-white">
-              Account Details
-            </span>
-          </div>
-          <div class="d-flex flex-column">
-            <div class="blue-secondary px-3 py-2 mt-2">
-              <a style="text-decoration:none; color:#0066B0" href="/user-profile"><i class="fa-solid  fa-user"><span
-                    class="blue-secondary px-2">My Account</span></i></a>
-            </div>
-            <div class="blue-secondary px-3 py-2">
-              <a style="text-decoration:none; color:#0066B0" href="/cart/cart"><i class="fa-solid fa-cart-shopping"><span
-                    class="blue-secondary px-2">My Cart</span></i></a>
-            </div>
-            <div class="blue-secondary px-3 py-2">
-              <a style="text-decoration:none; color:#0066B0" href="/order"><i class="fa-solid fa-bag-shopping"><span
-                    class="blue-secondary px-2">Order history</span></i></a>
-            </div>
-            <div class="blue-secondary px-3 py-2 mb-2">
-              <a style="text-decoration:none; color:#0066B0" href="/my-account/wishlist"><i
-                  class="fa-solid fa-heart"><span class="blue-secondary px-2">My Wish List</span></i></a>
-            </div>
-            <div class="blue-secondary px-3 py-2 mb-2">
-              <form method="GET" action="/logout">
-                <button type="submit"class="ml-auto">Logout</button>
-              </form>
-            </div>
-          </div>
-         
-        </div>
-  
-      </div>
-    </section>
-  
-    <div style="margin-left: -100px;">
-      <a href="/">
-        <img style="width: 3rem;" src="/images/logo/OIP (4).jpg" alt="">
-      </a>
-    </div>
-    
-   
-    <div style="width: 15rem;" class="ladels d-flex justify-content-between align-items-center fw-bold">
-      <a href="/prod">All Products</a>
-      <a href="/products/?&category=Men%20Watches">Mens</a>
-      <a href="/products/?&category=Womens%20Watches">Womens</a>
-    </div>
-    <div style="width: 23rem;" class=" ">
-      <form class="form-inline search d-flex justify-content-between align-items-center">
-        <a id="query" href="/prod/?search="><i onclick="searchProduct()" class="fa-brands fa-searchengin"></i></a>
-        <input id="searchInput" class="search-box px-2 mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      </form>
-    </div>
-    <div style="width:9rem;font-size:1.5rem" class="ladels fw-bold ">
-      <a href="/my-account/wishlist"><i class="fa-solid fa-heart ml-2"></i></a>
-      <a href="/cart"><i class="fa-solid fa-cart-shopping ml-2"><span style="font-size: 0.8rem;" id="cartCount"
-            class="badge bg-success text-white h6 badge-pill"></span></i></a>
-      <a id="btnn" href="#"><i id="#userIcon" class="fa-solid  ml-2 fa-user"></i></a>
-    </div>
-
-  
-  </nav>
   <script>
       
     $(document).ready(function () {
@@ -258,7 +93,7 @@ border-radius: 10px;
         <label for="comment" class="fw-bold">Comment</label>
         <textarea name="comment" id="comment" class="col-md-8 form-control" rows="4"></textarea>
         <div class="button-wrapper mt-2 col-md-6">
-            <input type="submit" class="btn add-btn" value="Send Return Request">
+            <input type="submit" class="btn btn-success" value="Send Return Request">
             <input type="reset" class="btn clear-btn" value="Clear">
         </div>
     </form>
