--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -330,7 +330,7 @@
                                 <div class="form-check">
                                     <input class="form-check-input" value="wallet" type="radio" name="payment_method"
                                         id="" checked>
-                                    <label class="form-check-label" for="flexRadioDefault1">
+                                    <label id="walletBalance" class="form-check-label" for="flexRadioDefault1">
                                         EC-Shop Wallet
                                     </label>
                                 </div>
@@ -362,19 +362,20 @@
                 <div class="card-header py-3" style="background-color: #fff;">
                     <h5 class="mb-0">Summary</h5>
                 </div>
+                
                 <div class="card-body" style="background-color: #fff;">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                             Products
-                            <span>₹<%= totalAmount %></span>
+                            <span>₹<%= fullPrice %></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                            Shipping (free)
-                            <span>₹ 0</span>
+                            Discount Percentage
+                            <span></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                            Discount:
-                            <span id="showDiscount"><%= offerPrice %></span>
+                            Discount Price:
+                            <span id="showDiscount"><% offerPrice %></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                             <div>
@@ -465,6 +466,9 @@
 
                         if (data.success) {
                             console.log('Order placed successfully');
+                            document.getElementById('walletBalance').innerText = data.user_wallet;
+
+
                             Swal.fire({
                                 icon: 'success',
                                 title: 'Order Placed Successfully',
@@ -566,10 +570,10 @@
                     discount.value = data.discount
                     let coupen_code = document.getElementById('coupen_code');
                     coupen_code.value = data.coupen_code
-                    productsElement.textContent = `₹${newTotalAmount}`;
-                    shippingElement.textContent = '₹ 0';
+                    productsElement.textContent = `₹${total}`;
+                    shippingElement.textContent = `${data.discount}%`;
                     totalAmountElement.textContent = `₹${newTotalAmount}`;
-                    Showdiscount.textContent = `${data.discount}%`
+                    Showdiscount.textContent = `₹${data.dis}`
                     console.log(Showdiscount);
                     $('.coupenss').hide();
                     $('#proceedPayment').show();
