--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -76,7 +76,7 @@
                     </div>
                     <div class="text-center">
                         <div class="login-box">
-                            <p>Already registered? <a href="/login" class="btn btn-link" style="text-decoration: none; color: white;">Login Here</a></p>
+                            <p>Already registered? <a href="/" class="btn btn-link" style="text-decoration: none; color: white;">Login Here</a></p>
                         </div>
                     </div>
                     
